@@ -1,3 +1,11 @@
+2006-09-28  Rodney Dawes  <dobey@novell.com>
+
+	* configure.ac: Remove AM_MAINTAINER_MODE call
+	Add AC_PATH_PROG for python so that we can byte-compile the module
+
+	* python/Makefile.am: Add bits to byte-compile the python module and
+	install the byte-compiled cache file
+
 2006-09-21  Rodney Dawes  <dobey@novell.com>
 
 	* README: Update with some content about how the scripts work
